# FastAPI_SocialWeb_With_WebSocket

./: .gitignore  BD_BaseModel.py  BD_Config.py  BD_Models.py  FastAPI.py  README.md  alembic.ini  pyproject.toml
Auth/: EndPoints.py  RegistrationForm.py  User_CRUD.py
Chat/: ChatForm.py  EndPoints.py  Сhat_CRUD.py
Comment/: CommentForm.py  Comment_CRUD.py  EndPoints.py
Message/: EndPoints.py  MessageForm.py  Message_CRUD.py
Profile/: EndPoints.py  ProfileForm.py  Profile_CRUD.py
alembic/: env.py
alembic/versions/: 061736006319_profile_fix_1_to_init_with_registration.py  17c0d3b540b0_profile_fix_1_nullable_for_img.py  190040b74282_models_fix_4_add_expire_time_for_token.py  4cb410d0de80_models_fix_3_add_token_model.py  a729d8855bfe_models_fix_2_aded_email_max_length_of_.py  c6dec8d7005a_models_fix_1_delete_childs_and_parents.py  db98ac1c03a0_base_migration.py  e8feb3870e52_chat_fix_1_added_nullable_chat_name.py
