[tool.poetry]
name = "project requrements"
version = "0.1.0"
description = "Шаблон проекта"
authors = ["Mazinskiy Oleg"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
alembic = "==1.13.2"
amqp = "==5.2.0"
annotated-types = "==0.7.0"
anyio = "==4.4.0"
asn1crypto = "==1.5.1"
asyncio = "==3.4.3"
asyncpg = "==0.29.0"
bcrypt = "==4.2.0"
billiard = "==4.2.0"
build = "==1.2.1"
cachecontrol = "==0.14.0"
celery = "==5.4.0"
certifi = "==2024.8.30"
cffi = "==1.17.0"
charset-normalizer = "==3.3.2"
cleo = "==2.1.0"
click = "==8.1.7"
click-didyoumean = "==0.3.1"
click-plugins = "==1.1.1"
click-repl = "==0.3.0"
crashtest = "==0.4.1"
cryptography = "==43.0.0"
distlib = "==0.3.8"
dulwich = "==0.21.7"
ecdsa = "==0.19.0"
fastapi = "==0.112.2"
fastapi-cache2 = "==0.2.2"
fastjsonschema = "==2.20.0"
filelock = "==3.15.4"
greenlet = "==3.0.3"
h11 = "==0.14.0"
idna = "==3.8"
installer = "==0.7.0"
jaraco-classes = "==3.4.0"
jeepney = "==0.8.0"
keyring = "==24.3.1"
kombu = "==5.4.0"
mako = "==1.3.5"
markupsafe = "==2.1.5"
more-itertools = "==10.4.0"
msgpack = "==1.0.8"
packaging = "==24.1"
passlib = "==1.7.4"
pendulum = "==3.0.0"
pexpect = "==4.9.0"
pg8000 = "==1.31.2"
pillow = "==10.4.0"
pkginfo = "==1.11.1"
platformdirs = "==4.2.2"
poetry = "==1.8.3"
poetry-core = "==1.9.0"
poetry-plugin-export = "==1.8.0"
prompt-toolkit = "==3.0.47"
ptyprocess = "==0.7.0"
pyasn1 = "==0.6.0"
pycparser = "==2.22"
pydantic = "==2.8.2"
pydantic-settings = "==2.4.0"
pydantic-core = "==2.20.1"
pyproject-hooks = "==1.1.0"
python-dateutil = "==2.9.0.post0"
python-dotenv = "==1.0.1"
python-jose = "==3.3.0"
python-multipart = "==0.0.9"
rapidfuzz = "==3.9.7"
redis = "==5.0.8"
requests = "==2.32.3"
requests-toolbelt = "==1.0.0"
rsa = "==4.9"
scramp = "==1.4.5"
secretstorage = "==3.3.3"
shellingham = "==1.5.4"
six = "==1.16.0"
sniffio = "==1.3.1"
sqlalchemy = "==2.0.32"
starlette = "==0.38.2"
time-machine = "==2.15.0"
tomlkit = "==0.13.2"
trove-classifiers = "==2024.7.2"
typing-extensions = "==4.12.2"
tzdata = "==2024.1"
urllib3 = "==2.2.2"
uvicorn = "==0.30.6"
vine = "==5.1.0"
virtualenv = "==20.26.3"
wcwidth = "==0.2.13"

[project]
dependencies = [

]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
